[package]
name = "rustpbx"
version = "0.3.16"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A SIP PBX implementation in Rust"
license = "MIT"
repository = "https://github.com/restsend/rustpbx"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "pbx", "webrtc"]
categories = ["network-programming", "multimedia"]

[features]
vad_webrtc = ["voice-engine/vad_webrtc"]
vad_silero = ["voice-engine/vad_silero"]
vad_ten = ["voice-engine/vad_ten"]
opus = ["voice-engine/opus"]
g729 = ["voice-engine/g729"]
console = ["dep:minijinja"]
addon-acme = []
addon-wholesale = []
commerce = ["addon-wholesale"]
default = [
    "vad_webrtc",
    "vad_silero",
    "vad_ten",
    "opus",
    "g729",
    "console",
    "addon-acme",
]
not_vad = []
perfcli-bin = []
text2wav-bin = []
wav2text-bin = []

[dependencies]
anyhow = "1"
async-trait = "0.1.88"
async-stream = "0.3.6"
axum = { version = "0.8.7", features = ["ws", "tokio", "multipart"] }
bytes = "1"
futures = "0.3.31"
rustls = { version = "0.23.33", features = ["ring"] }
minijinja = { version = "2", features = ["loader", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
glob = "0.3.3"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
webrtc = "0.14.0"
clap = { version = "4.5.51", features = ["derive"] }
toml = "0.9.8"
toml_edit = "0.23.7"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
# rsipstack = "0.2.93"
#rsipstack = { path = "../rsipstack" }
rsipstack = { git = "https://github.com/umran/rsipstack.git", rev = "07b5a3b" }
voice-engine = { version = "0.3.18", default-features = false }
rsip = "0.4.0"
reqwest = { version = "0.12.24", features = [
    "json",
    "stream",
    "rustls-tls",
    "multipart",
] }
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4.3"
dotenv = "0.15"
async-openai = { version = "0.31.1", features = ["rustls", "chat-completion"] }
md-5 = "0.10.6"
once_cell = "1.21.3"
cpal = "0.16.0"
regex = "1.12.2"
ring = "0.17.14"
http = "1.4.0"
urlencoding = "2.1.3"
byteorder = "1.5.0"
ipnetwork = "0.21.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "mysql",
    "any",
] }
sea-orm = { version = "1.1.19", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
] }
sea-orm-migration = "1.1.19"
argon2 = { version = "0.5.3", features = ["password-hash"] }
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp"] }
humantime = "2.3.0"
serde_with = "3.16.1"
console-subscriber = "0.5.0"
lru = "0.16.2"
phonenumber = "0.3.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
instant-acme = "0.8.4"
rcgen = "0.14.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.14.0"
warp = { version = "0.4.1", features = ["server", "websocket"] }
portpicker = "0.1.1"

[[example]]
name = "webrtc-demo"
path = "examples/webrtc-demo/src/main.rs"


[[example]]
name = "voice-demo"
path = "examples/voice_demo.rs"


[[bin]]
name = "rustpbx"
path = "src/bin/rustpbx.rs"

[[bin]]
name = "perfcli"
path = "src/bin/perfcli.rs"
required-features = ["perfcli-bin"]

[[bin]]
name = "text2wav"
path = "src/bin/text2wav.rs"
required-features = ["text2wav-bin"]

[[bin]]
name = "wav2text"
path = "src/bin/wav2text.rs"
required-features = ["wav2text-bin"]

[patch.crates-io]
rsipstack = { git = "https://github.com/umran/rsipstack.git", rev = "07b5a3b" }
